Feat: new text changes, button hovers clor changes

--- a/public/privacypolicy.html
+++ b/public/privacypolicy.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8" />
     <title>Datenschutzerklärung | Daniela Hagmann</title>
     <link rel="icon" href="./dist/Images/logo_2.png" type="image/x-icon">
-    <link rel="stylesheet" href="public/style.css" />
+    <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
   </head>
   <body>
     <nav>
@@ -119,12 +120,12 @@
       </div>
     </section>
 
-    <footer>
+  <footer>
   <div class="text">
     <span><a href="./privacypolicy.html">Datenschutzerklärung</a> | © Copyright 2024 All Rights Reserved</span>
   </div>
 </footer>
   
-    <script src="public/script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
