Contact form changed, creating 2 columns, ading new adress and google map. Privecy policy adress changes and changes on the footer

--- a/public/privacypolicy.html
+++ b/public/privacypolicy.html
@@ -45,11 +45,11 @@
             <br><br>
             <strong>Daniela Hagmann</strong>
             <br>
-            Liestal, Baselland, Schweiz
+            <i class="fas fa-map-marker-alt contact-icon-green"></i> Dorfstrasse 13, 4566 Halten
             <br>
-            <i class="fas fa-phone-alt"></i> +41 76 755 70 81
+            <i class="fas fa-phone-alt contact-icon-green"></i> +41 76 755 70 81
             <br>
-            <i class="fas fa-envelope"></i> d.p.hagmann@hin.ch
+            <i class="fas fa-envelope contact-icon-green"></i> d.p.hagmann@hin.ch
             <br><br>
             <h3>3. Art und Umfang der Datenbearbeitung</h3>
             <strong>a) Daten, die Sie uns zur Verfügung stellen</strong>
@@ -95,7 +95,7 @@
             Für die statistische Analyse der Website-Nutzung setzen wir Google Analytics ein. Die dabei erhobenen Daten werden ebenfalls innerhalb der EU verarbeitet. Wir stellen sicher, dass diese Anbieter vertraglich verpflichtet sind, ein angemessenes Datenschutzniveau zu gewährleisten.
 
             <h3>7. Cookies und ähnliche Technologien</h3>
-            Derzeit verwenden wir auf unserer Website **keine Cookies**. Wir behalten uns jedoch das Recht vor, in Zukunft Cookies und ähnliche Technologien einzusetzen, um die Nutzung zu erleichtern und die Funktionalität zu verbessern. In diesem Fall werden Sie darüber informiert.
+            Derzeit verwenden wir auf unserer Website keine Cookies. Wir behalten uns jedoch das Recht vor, in Zukunft Cookies und ähnliche Technologien einzusetzen, um die Nutzung zu erleichtern und die Funktionalität zu verbessern. In diesem Fall werden Sie darüber informiert.
 
             <h3>8. Ihre Rechte als betroffene Person</h3>
             Nach dem revDSG haben Sie folgende Rechte in Bezug auf Ihre Daten:
@@ -114,18 +114,20 @@
             <h3>10. Kontakt</h3>
             Bei Fragen zum Datenschutz können Sie uns jederzeit kontaktieren.
             <br>
-            <i class="fas fa-envelope"></i> d.p.hagmann@hin.ch
+            <i class="fas fa-envelope contact-icon-green"></i> d.p.hagmann@hin.ch
           </p>
         </div>
       </div>
     </section>
 
   <footer>
-  <div class="text">
-    <span><a href="./privacypolicy.html">Datenschutzerklärung</a> | © Copyright 2024 All Rights Reserved</span>
-  </div>
-</footer>
-  
+      <div class="text">
+        <span>
+          <a href="./privacypolicy.html">Datenschutzerklärung</a> | © Copyright 2025 All Rights Reserved | Developed by <a href="https://hieroglyphcode.ch/" target="_blank">Hieroglyph Code Custom Software Solutions</a>
+        </span>
+      </div>
+    </footer>
+    
     <script src="script.js"></script>
   </body>
 </html>
