about section change

--- a/public/index.html
+++ b/public/index.html
@@ -130,7 +130,7 @@
   <br><br>
   Mein Steckenpferd sind Entwicklungstraumata und ihre Folgen sowie Beziehungsdynamiken.
   <br><br>
-  Ich schätze Gruppenarbeiten, Gemeinschaft und Beziehungen sehr. Mit meinem Partner suche ich derzeit nach Räumlichkeiten, in denen wir eine Tagesstruktur für Menschen in Krisen aufbauen können. Mehr dazu hoffentlich bald hier.
+  Ich schätze Gruppenarbeiten, Gemeinschaft und Beziehungen sehr. Mein Partner und ich haben in Halten nun Räumlichkeiten gefunden, in welchen wir ab nächstem Jahr zusätzlich einen Auszeit Platz (Time-out-Space), einen Ort für eine Tagesstruktur sowie die Möglichkeit für Terminbesuche anbieten können.
 </p>
      </div>
     </div>
